# TinyEngine

./: .gitignore  AutoBlock  CMakeLists.txt  README.md
Assets/: TestLevel.lvl  assets.pak  static.vs  wall.fs
TinyEngine/: TinyEngine.sln
TinyEngine/TinyEngine/: TinyAssets.cpp  TinyAssets.h  TinyDisplay.cpp  TinyDisplay.h  TinyEngine.vcxproj  TinyEngine.vcxproj.filters  TinyMaths.h  TinyRaytrace.cpp  TinyRaytrace.h  TinyRender.cpp  TinyShader.cpp  TinyShader.h  TinyUtil.cpp  TinyUtil.h  TinyWorld.cpp  TinyWorldTransform.cpp  glad.c
TinyEngine/TinyEngine/Assets/: wall.vs
TinyEngine/TinyEngine/Include/glad/: glad.h
TinyEngine/TinyEngine/x64/Release/TinyEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TinyEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TinyEngine/x64/Release/: TinyEngine.iobj
include/: TinyAssets.h  TinyDisplay.h  TinyRaytrace.h  TinyRender.h  TinyShader.h  TinyWorld.h  TinyWorldTransform.h  stb_image.h
source/: TinyEngine.cpp  TinyMaths.cpp  TinyRaytrace.cpp  glad.c
